<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="scan_upi"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_upi_short"
        android:shortcutLongLabel="@string/shortcut_upi_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.fin"
            android:targetClass="com.example.fin.MainActivity">
            <extra android:name="quick_action" android:value="upi" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    
    <shortcut
        android:shortcutId="ai_advisor"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_ai_short"
        android:shortcutLongLabel="@string/shortcut_ai_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.fin"
            android:targetClass="com.example.fin.MainActivity">
            <extra android:name="quick_action" android:value="ai" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="new_expense"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_expense_short"
        android:shortcutLongLabel="@string/shortcut_expense_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.fin"
            android:targetClass="com.example.fin.MainActivity">
            <extra android:name="quick_action" android:value="expense" />
        </intent>
    </shortcut>
</shortcuts>
